static/css/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Macondo&family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

/* CSS variables*/
:root {
    /*--variable-name */
    --primary-font: "Oswald", sans-serif;
    --primary-color: #333E3D;
    --secondary-color: rgb(214, 209, 202);
    --tertiary-color: rgb(65, 134, 129);
    --highlight: #A89382;
    --light-highlight: rgb(217, 126, 71);
    --bright-highlight: #632a13;
    --danger: rgb(131, 21, 21);
}

/* General styles */
body {
    min-height: 100vh;
    display: flex;
    width: 100%;
    flex-direction: column;
    font-family: var(--primary-font);
    margin: 0;
    overflow-x: hidden;
    overflow-wrap: anywhere;
}

main {
    /* Main element to take up any surplus space to push footer down */
    flex: 1 0 auto;
    max-width: 1399px;
    margin: 0% 5%;
    position: relative;
    padding-bottom: 20px;
}

/* Global styles */
.icon-button {
    margin: 5px;
}

.account-button, .action-button {
    background-color: var(--secondary-color);
    cursor: pointer;
    transition: color 0.2s ease-in-out;
}

.account-button:hover, .action-button:hover, .icon-button:hover {
    background-color: var(--light-highlight);
    color: white;
}

.warning-message, .errorlist {
    color: red;
}

/* Base.html style */
.navbar {
    display: flex;
    width: 100%;
    background-color: var(--highlight);
    padding: 10px;
}

.navbar > .account-nav {
    justify-content: right;
}

.heading, .action-form {
    background-color: rgba(214, 209, 202, 0.35);
    padding: 10px;
    text-align: center;
}

.account-text {
    height: 25px;
    padding-right: 20px;
    text-align: right;
}

.footer {
    width: 100%;
    background-color: var(--primary-color);
    color: white;
    text-align:  center;
}

.github {
    text-decoration: none;
    color: white;
    font-size: small;
}


/* about.html style */
.overview {
    text-align: center;
}
.cover-image {
    background: url("../images/home-library.jpg") no-repeat center center/cover;
    width: 100%;
    height: 400px;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;

}

.cover-text {
    background-color: white;
    text-align: center;
    width: 100%;
    justify-content: space-evenly;
    padding: 5px;
}

.cover-text p {
    margin: 0; 
}

.sign-in-button, .sign-up-button {
    align-items: center;
    margin: 0px 25px;
}

.sign-up-button {
    background-color: rgba(65, 134, 129, 0.3);
}

.sign-up-button:hover {
    background-color: rgb(65, 134, 129);
    color: white;
}

.sign-in-button {
    background-color: rgba(217, 126, 71, 0.3);
}

.sign-in-button:hover {
    background-color: rgb(217, 126, 71);
    color: white;
}

/* index.html style */
.filter {
    display: flex;
    justify-content: center;
    align-items: center;
}

.filter-heading{
    font-size: small;
}

.collection-link {
    text-decoration: none;
    color: var(--primary-color);
}

.collection-link:hover {
    text-decoration: none;
    color: var(--light-highlight);
}

/* collection_detail.html styles */
.collection-name {
    text-align: center;
}

.delete-icon {
    padding: 2px 5px;   
}

